// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BookList component GraphQL error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render BookList component Loading state 1`] = `
<div>
  <p>
    Loading list of books ...
  </p>
</div>
`;

exports[`Render BookList component Network error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render BookList component Sucess state 1`] = `
<div>
  <div>
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <div>
      <p>
        Title: 
        Book1
      </p>
      <p>
        Genre: 
        Fantasy
      </p>
      <p>
        Author: 
        Author1
      </p>
    </div>
  </div>
</div>
`;
